Finished the update hero page with functionality. Added a picture of a hero using static files

--- a/superhero_project/superheroes/templates/superheroes/create.html
+++ b/superhero_project/superheroes/templates/superheroes/create.html
@@ -15,6 +15,7 @@
         Secondary Ability: <input type="text" name="secondary" id="secondary"><br />
         Catchphrase: <input type="text" name="catchphrase" id="catchphrase"><br />
         <input type="Submit" value="Add!">
+        <a href="{% url 'superheroes:index' %}">Go Back Home</a>
     </form>
 </body>
 </html>
