--- a/superhero_project/superheroes/templates/superheroes/index.html
+++ b/superhero_project/superheroes/templates/superheroes/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +10,15 @@
 </head>
 <body>
     <h1>List of Heroes</h1>
+    <img src="{% static 'superhero_project/images/wolverine.jpeg' %}" width="210" height="312" >
     <ul>
         {% for hero in all_heroes %}
-        <li> <h2>{{hero.name}} - <a href="{% url 'superheroes:detail' hero.id %}">Show Hero Details</a></h2> </li>
+        <li> <h2>{{hero.name}} - <a href="{% url 'superheroes:detail' hero.id %}">Show Hero Details</a> - 
+            <a href="{% url 'superheroes:update' hero.id %}">Update This Hero</a> -
+            <a href="{% url 'superheroes:delete' hero.id %}">Delete This Hero</a></h2> </li>
         {% endfor %}
     </ul>
-    <a href="{% url 'superheroes:create' %}">Add New Superhero</a>
+    <h3><a href="{% url 'superheroes:create' %}">Add New Hero</a></h3>
+    
 </body>
 </html>
