--- a/superhero_project/superheroes/templates/superheroes/index.html
+++ b/superhero_project/superheroes/templates/superheroes/index.html
@@ -9,7 +9,7 @@
     <title>Superhero Index</title>
 </head>
 <body>
-    <h1>List of Heroes</h1>
+    <h1>List of Superheroes</h1>
     <img src="{% static 'superhero_project/images/wolverine.jpeg' %}" width="240" height="345" >
     <ul>
         {% for hero in all_heroes %}
